# witmotion-sensors

./: CLAUDE.md  DEVELOPMENT.md  Dockerfile  README.md  doover_config.json  pyproject.toml
.devcontainer/: devcontainer.json  on-create.sh  post-attach.sh  update-content.sh
.github/workflows/: build-image.yml  validate-schema.yml
scripts/: commission_sensor.py  commission_sensor_remote.sh
simulators/: app_config.json  docker-compose.yml
simulators/sample/: Dockerfile  main.py  pyproject.toml
src/app_template/: __init__.py  app_config.py  app_state.py  app_tags.py  app_ui.py  application.py
src/witmotion_sensors/: __init__.py  app_config.py  app_state.py  app_tags.py  app_ui.py  application.py  commands.py  registers.py
tests/: conftest.py  test_commands.py  test_decoder.py  test_imports.py  test_simulator.py  test_state_machine.py
