[project]
name = "witmotion-sensors"
version = "0.1.0"
description = "Doover device app for WitMotion WTVB01-485 vibration sensors over Modbus RTU"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=1.0.0a8",
    "transitions>=0.9.2",
]

[project.scripts]
doover-app-run = "witmotion_sensors:main"
export-config = "witmotion_sensors.app_config:export"
export-ui = "witmotion_sensors.app_ui:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pymodbus>=3.6.0,<3.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
